--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,10 @@ app:
     name: "Sample2 Application"
     version: 2.0
 
-# DEBUGにすると非常に多くのSpring Bootのデバッグログまで出力されます。
+# logging.level.rootをDEBUGにすると非常に多くのSpring Bootのデバッグログまで出力されます。
+# logging.levelにあるcom.example.demoはこのデモアプリケーションのクラスパスを指定しています。
 # 設定項目参考: https://b1san-blog.com/post/spring/spring-log/
 logging:
   level:
     root: INFO
+    com.example.demo: debug
