--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ app:
   sample2controller:
     name: "Sample2 Application"
     version: 2.0
+  retrycontroller:
+    maxAttempts: "2"
+    delay: "300"
 
 # logging.level.rootをDEBUGにすると非常に多くのSpring Bootのデバッグログまで出力されます。
 # logging.levelにあるcom.example.demoはこのデモアプリケーションのクラスパスを指定しています。
